# web3_py_simple_storage

./: README.md  SimpleStorage.sol  compiled_code.json  deploy.py  pyproject.toml
