[tool.poetry]
name = "web3-py-simple-storage"
version = "0.1.0"
description = ""
authors = ["rich <rkba2@outlook.com>"]
readme = "README.md"
packages = [{include = "web3_py_simple_storage"}]

[tool.poetry.dependencies]
python = "^3.10"
py-solc-x = "^1.1.1"
web3 = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
